# Bookbot

./: README.md  main.py  pyproject.toml  stats.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
